--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "daisyui": "^2.51.4",
     "framer-motion": "^10.9.1",
+    "hash-router-dom": "^1.0.0",
     "heroicons-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -46,6 +47,7 @@
   "devDependencies": {
     "gh-pages": "^5.0.0",
     "react-router-dom": "^6.10.0",
+    "router": "^1.3.8",
     "tailwindcss": "^3.2.7"
   }
 }
